--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&family=Poppins:wght@700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "PT Sans", sans-serif;
+}
+.heading {
+  width: 100vw;
+  font-size: 50px;
+  padding-top: 50px;
+  background: -webkit-linear-gradient(rgb(232, 255, 27), rgb(255, 187, 0));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.square {
+  background: rgb(0, 0, 0);
+  height: 110px;
+  width: 110px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  cursor: pointer;
+  color: rgb(0, 0, 0);
+  font-size: 4rem;
+  border-radius: 13px;
+  box-shadow: 3px 5px 14px rgb(228, 228, 228);
+  border: rgb(238, 238, 238);
 }
 
-.App-link {
-  color: #61dafb;
+.square:hover {
+  background: rgba(232, 255, 27, 0.842);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.square.clicked {
+  background: -webkit-linear-gradient(rgb(232, 255, 27), rgb(255, 187, 0));
+}
+
+.App {
+  height: 100vh;
+  background: rgb(0, 0, 0);
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.board {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  align-items: center;
+  justify-content: center;
+  grid-gap: 5px;
+}
+
+.end-game-screen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+.btn {
+  background: rgb(232, 255, 27);
+  color: black;
+  border: 3px solid rgb(160, 177, 9);
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  padding: 10px 14px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: 0.3s ease-out;
+  max-height: 7rem;
+}
+
+.btn:hover {
+  background: rgba(232, 255, 27, 0.479);
+  color: rgb(0, 0, 0);
+  border: 2px solid rgb(229, 255, 0);
+}
+
+.win-text {
+  padding-bottom: 15px;
+  color: rgb(255, 255, 255);
+  font-size: 4rem;
 }
